k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-demo-app
  namespace: eks-demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-demo-app
  template:
    metadata:
      labels:
        app: eks-demo-app
    spec:
      containers:
        - name: eks-demo-app
          image: 556152725477.dkr.ecr.us-east-2.amazonaws.com/flaskapp-nayapay-1:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
