k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-app
  namespace: eks-demo-app
spec:
  type: LoadBalancer
  selector:
    app: eks-demo-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
